created header navbar

--- a/src/app/main/components/ui/header/header.component.html
+++ b/src/app/main/components/ui/header/header.component.html
@@ -1,1 +1,27 @@
-<p>header works!</p>
+<header class="p-2 text-bg-dark">
+  <div class="container">
+    <div class="d-flex flex-wrap align-items-center justify-content-center justify-content-lg-start flex-sm-column flex-lg-row">
+      <a href="/" class="d-flex align-items-center mb-lg-0 text-white text-decoration-none">
+        <h1 class="m-0">MAVEKO</h1>
+      </a>
+
+      <div class="flex-fill d-block" style="font-size: 11px">
+        <ul class="nav col-12 me-md-auto justify-content-center mb-md-0">
+          <li><a href="#" class="nav-link px-2 text-white">Suppliers</a></li>
+          <li><a href="#" class="nav-link px-2 text-white">Categories</a></li>
+          <li><a href="#" class="nav-link px-2 text-white">Products</a></li>
+          <li><a href="#" class="nav-link px-2 text-white">Customers</a></li>
+          <li><a href="#" class="nav-link px-2 text-white">Address</a></li>
+          <li><a href="#" class="nav-link px-2 text-white">Conatct Info</a></li>
+          <li><a href="#" class="nav-link px-2 text-white">Currencies</a></li>
+          <li><a href="#" class="nav-link px-2 text-white">Units of Measure</a></li>
+        </ul>
+      </div>
+
+      <div class="text-end">
+        <button type="button" class="btn btn-sm btn-outline-light me-2">Users</button>
+        <button type="button" class="btn btn-sm btn-warning">Sign-out</button>
+      </div>
+    </div>
+  </div>
+</header>
