--- a/src/app/operation/components/ui/supplier-form/supplier-form.component.html
+++ b/src/app/operation/components/ui/supplier-form/supplier-form.component.html
@@ -1,21 +1,21 @@
-<form>
-  <mat-form-field>
+<form class="p-3">
+  <mat-form-field class="d-block">
     <mat-label>Company Name</mat-label>
-    <input matInput>
+    <input matInput required>
   </mat-form-field>
-</form>
 
-<div mat-dialog-actions>
-  <button mat-raised-button type="button" color="warn">
-    <mat-icon>remove_circle</mat-icon>
-    Cancel
-  </button>
-  &nbsp;
-  <button mat-raised-button color="primary" type="submit" class="justify-content-center align-items-center">
-    <mat-icon>save</mat-icon>
-    Save
-  </button>
-</div>
+  <div mat-dialog-actions class="text-end">
+    <button mat-raised-button type="button" color="warn">
+      <mat-icon>remove_circle</mat-icon>
+      Cancel
+    </button>
+    &nbsp;
+    <button mat-raised-button color="primary" type="submit" class="justify-content-center align-items-center">
+      <mat-icon>save</mat-icon>
+      Save
+    </button>
+  </div>
+</form>
 
 <!-- <div mat-dialog-actions align="end">
   <button mat-raised-button color="success" type="submit">
