--- a/src/app/operation/components/ui/currency-form/currency-form.component.html
+++ b/src/app/operation/components/ui/currency-form/currency-form.component.html
@@ -1,1 +1,22 @@
-<p>currency-form works!</p>
+<form class="p-3">
+  <mat-form-field class="d-block">
+    <mat-label>Name</mat-label>
+    <input matInput required>
+  </mat-form-field>
+  <mat-form-field class="d-block">
+    <mat-label>Alias</mat-label>
+    <input matInput required>
+  </mat-form-field>
+
+  <div mat-dialog-actions class="text-end">
+    <button mat-raised-button type="button" color="warn">
+      <mat-icon>remove_circle</mat-icon>
+      Cancel
+    </button>
+    &nbsp;
+    <button mat-raised-button color="primary" type="submit" class="justify-content-center align-items-center">
+      <mat-icon>save</mat-icon>
+      Save
+    </button>
+  </div>
+</form>
