--- a/src/app/operation/components/ui/product-form/product-form.component.html
+++ b/src/app/operation/components/ui/product-form/product-form.component.html
@@ -1,1 +1,36 @@
-<p>product-form works!</p>
+<form class="p-3">
+  <mat-form-field class="d-block">
+    <mat-label>Product Name</mat-label>
+    <input matInput required>
+  </mat-form-field>
+  <mat-form-field class="d-block">
+    <mat-label>Description</mat-label>
+    <textarea matInput></textarea>
+  </mat-form-field>
+  <mat-form-field class="d-block">
+    <mat-label>Product Category</mat-label>
+    <mat-select required>
+      <mat-option value="one">First option</mat-option>
+      <mat-option value="two">Second option</mat-option>
+    </mat-select>
+  </mat-form-field>
+  <mat-form-field class="d-block">
+    <mat-label>Product Supplier</mat-label>
+    <mat-select required>
+      <mat-option value="one">First option</mat-option>
+      <mat-option value="two">Second option</mat-option>
+    </mat-select>
+  </mat-form-field>
+
+  <div mat-dialog-actions class="text-end">
+    <button mat-raised-button type="button" color="warn">
+      <mat-icon>remove_circle</mat-icon>
+      Cancel
+    </button>
+    &nbsp;
+    <button mat-raised-button color="primary" type="submit" class="justify-content-center align-items-center">
+      <mat-icon>save</mat-icon>
+      Save
+    </button>
+  </div>
+</form>
