added icons on navbar

--- a/src/app/main/components/ui/header/header.component.html
+++ b/src/app/main/components/ui/header/header.component.html
@@ -18,8 +18,14 @@
       </div>
 
       <div class="text-end">
-        <button type="button" class="btn btn-sm btn-outline-light me-2">Users</button>
-        <button type="button" class="btn btn-sm btn-warning">Sign-out</button>
+        <button type="button" class="btn btn-sm btn-outline-light me-2 px-3">
+          <i class="pi pi-users"></i>
+          Users
+        </button>
+        <button type="button" class="btn btn-sm btn-warning px-3">
+          <i class="pi pi-sign-out"></i>
+          Sign-out
+        </button>
       </div>
     </div>
   </div>
