added mat dialog on supplier

--- a/src/app/operation/components/container/supplier/supplier.component.html
+++ b/src/app/operation/components/container/supplier/supplier.component.html
@@ -1,1 +1,4 @@
-<app-supplier-form></app-supplier-form>
+<button mat-raised-button class="action-button bg-success text-white m-3 px-3" (click)="onNewClick()">
+  <i class="pi pi-plus-circle"></i>
+  New
+</button>
