--- a/src/app/main/components/container/layout/layout.component.html
+++ b/src/app/main/components/container/layout/layout.component.html
@@ -1,3 +1,7 @@
-<app-header></app-header>
-<router-outlet></router-outlet>
-<app-footer></app-footer>
+<div class="d-flex flex-column" style="height: 100%">
+  <app-header></app-header>
+  <div class="container my-4 flex-fill">
+    <router-outlet></router-outlet>
+  </div>
+  <app-footer></app-footer>
+</div>
