--- a/src/app/operation/components/container/supplier/supplier.component.html
+++ b/src/app/operation/components/container/supplier/supplier.component.html
@@ -1,4 +1,4 @@
-<button mat-raised-button class="action-button bg-success text-white m-3 px-3" (click)="onNewClick()">
+<button mat-raised-button class="action-button bg-success text-white px-4" (click)="onNewClick()">
   <i class="pi pi-plus-circle"></i>
   New
 </button>
