--- a/src/app/operation/components/ui/supplier-form/supplier-form.component.html
+++ b/src/app/operation/components/ui/supplier-form/supplier-form.component.html
@@ -5,7 +5,7 @@
   </mat-form-field>
 
   <div mat-dialog-actions align="end">
-    <button mat-raised-button type="button" color="warn">
+    <button mat-raised-button type="button" color="warn" (click)="onClose()">
       <mat-icon>remove_circle</mat-icon>
       Cancel
     </button>
