--- a/src/app/operation/components/ui/supplier-form/supplier-form.component.html
+++ b/src/app/operation/components/ui/supplier-form/supplier-form.component.html
@@ -1,7 +1,7 @@
 <form [formGroup]="form" (submit)="onSubmit()" class="p-3">
   <mat-form-field class="d-block">
     <mat-label>Company Name</mat-label>
-    <input matInput formControlName="company_name" required>
+    <input matInput formControlName="name" required>
   </mat-form-field>
 
   <div mat-dialog-actions align="end">
