connected category component with category-form-component using mat-dialog

--- a/src/app/operation/components/container/category/category.component.html
+++ b/src/app/operation/components/container/category/category.component.html
@@ -1,1 +1,4 @@
-<app-category-form></app-category-form>
+<button mat-raised-button class="action-button bg-success text-white px-4" (click)="onNewClick()">
+  <i class="pi pi-plus-circle"></i>
+  New
+</button>
