--- a/src/app/operation/components/ui/category-form/category-form.component.html
+++ b/src/app/operation/components/ui/category-form/category-form.component.html
@@ -1,22 +1,22 @@
-<form class="p-3">
+<form [formGroup]="form" (submit)="onSubmit()" class="p-3">
   <mat-form-field class="d-block">
     <mat-label>Category Name</mat-label>
-    <input matInput required>
+    <input matInput formControlName="name" required>
   </mat-form-field>
   <mat-form-field class="d-block">
     <mat-label>Description</mat-label>
-    <textarea matInput></textarea>
+    <textarea matInput formControlName="description"></textarea>
   </mat-form-field>
   <mat-form-field class="d-block">
     <mat-label>Parent Category</mat-label>
-    <mat-select>
-      <mat-option value="one">First option</mat-option>
-      <mat-option value="two">Second option</mat-option>
+    <mat-select formControlName="parent_id">
+      <mat-option value="1">First option</mat-option>
+      <mat-option value="2">Second option</mat-option>
     </mat-select>
   </mat-form-field>
 
-  <div mat-dialog-actions class="text-end">
-    <button mat-raised-button type="button" color="warn">
+  <div mat-dialog-actions align="end">
+    <button mat-raised-button type="button" color="warn" (click)="onClose()">
       <mat-icon>remove_circle</mat-icon>
       Cancel
     </button>
