--- a/src/app/operation/components/container/currency/currency.component.html
+++ b/src/app/operation/components/container/currency/currency.component.html
@@ -1,1 +1,4 @@
-<app-currency-form></app-currency-form>
+<button mat-raised-button class="action-button bg-success text-white px-4" (click)="onNewClick()">
+  <i class="pi pi-plus-circle"></i>
+  New
+</button>
