--- a/src/app/shared/components/list/list.component.html
+++ b/src/app/shared/components/list/list.component.html
@@ -1,21 +1,15 @@
-<p-table #dt [value]="data" 
-            (onHeaderCheckboxToggle)="onSelect()" 
-            (onRowSelect)="onSelect()" 
-            (onRowUnselect)="onSelect()" 
-            [(selection)]="checkedData" 
-            [scrollable]="true" 
-            [columns]="columns" 
-            scrollHeight="71vh">
+<p-table #dt [value]="data" (onHeaderCheckboxToggle)="onSelect()" (onRowSelect)="onSelect()"
+  (onRowUnselect)="onSelect()" [(selection)]="checkedData" [scrollable]="true" [columns]="columns" scrollHeight="71vh">
   <ng-template *ngIf="caption" pTemplate="caption">
     {{caption}}
   </ng-template>
   <ng-template pTemplate="colgroup" let-columns>
     <colgroup>
-        <col *ngIf="checkbox">
-        <col *ngFor="let col of columns" >
-        <col *ngIf="hasAction" class="action">
+      <col *ngIf="checkbox">
+      <col *ngFor="let col of columns">
+      <col *ngIf="hasAction" class="action">
     </colgroup>
-</ng-template>
+  </ng-template>
   <ng-template pTemplate="header">
     <tr>
       <th *ngIf="checkbox">
@@ -23,11 +17,6 @@
       </th>
       <th *ngFor="let column of columns">
         {{ column.label }}
-        <p-dropdown *ngIf="column.hasFilter" 
-                    [options]="columnFilterOptions" 
-                    [appendTo]="'body'" 
-                    (onChange)="dt.filter($event.value, column.name, 'equals')">
-        </p-dropdown>
       </th>
       <th *ngIf="hasAction" class="action">Actions</th>
     </tr>
@@ -38,19 +27,15 @@
         <p-tableCheckbox [value]="d"></p-tableCheckbox>
       </td>
       <td *ngFor="let column of columns">
-       <span *ngIf="column.type==='date'">{{d[column.name] |date:'medium'}}</span>
-       <span *ngIf="column.type===undefined">{{d[column.name]}}</span>
+        <span *ngIf="column.type==='date'">{{d[column.name] |date:'medium'}}</span>
+        <span *ngIf="column.type===undefined">{{d[column.name]}}</span>
       </td>
       <ng-container *ngIf="hasAction">
         <td>
-          <button *ngFor="let action of actions"
-                  mat-stroked-button
-                  [matTooltip]="getTooltip(d, action.tooltip)"
-                  class="icon mr-3"
-                  [color]="action.color"
-                  [style.display]="(action.hide ? action.hide(d) : '')"
-                  [disabled]="(action.disable ? action.disable(action, d) : false)"
-                  (click)="onClick(d,getIcon(d, action.icon))">
+          <button *ngFor="let action of actions" mat-stroked-button [matTooltip]="getTooltip(d, action.tooltip)"
+            class="icon mr-3" [color]="action.color" [style.display]="(action.hide ? action.hide(d) : '')"
+            [disabled]="(action.disable ? action.disable(action, d) : false)"
+            (click)="onClick(d,getIcon(d, action.icon))">
             <mat-icon>{{getIcon(d, action.icon)}}</mat-icon>
           </button>
         </td>
@@ -59,9 +44,9 @@
   </ng-template>
   <ng-template pTemplate="emptymessage" let-columns>
     <tr>
-        <td align="center" [attr.colspan]="columns.length+1">
-            No records found
-        </td>
+      <td align="center" [attr.colspan]="columns.length+1">
+        No records found
+      </td>
     </tr>
-</ng-template>
+  </ng-template>
 </p-table>
