added table and edit functionality for products

--- a/src/app/operation/components/ui/product-form/product-form.component.html
+++ b/src/app/operation/components/ui/product-form/product-form.component.html
@@ -17,8 +17,8 @@
   <mat-form-field class="d-block">
     <mat-label>Product Supplier</mat-label>
     <mat-select formControlName="supplier_id" required>
-      <mat-option value="one">First option</mat-option>
-      <mat-option value="two">Second option</mat-option>
+      <mat-option value="1">First option</mat-option>
+      <mat-option value="2">Second option</mat-option>
     </mat-select>
   </mat-form-field>
 
