--- a/src/app/operation/components/container/product/product.component.html
+++ b/src/app/operation/components/container/product/product.component.html
@@ -2,3 +2,9 @@
   <i class="pi pi-plus-circle"></i>
   New
 </button>
+
+<div class="my-3">
+  <app-list #list [columns]="columns" [caption]="'Products'" [actions]="tableActions" [hasAction]="true"
+    [data]="products$|async" (actionClick)="onClick($event)">
+  </app-list>
+</div>
