--- a/src/app/operation/components/container/currency/currency.component.html
+++ b/src/app/operation/components/container/currency/currency.component.html
@@ -2,3 +2,9 @@
   <i class="pi pi-plus-circle"></i>
   New
 </button>
+
+<div class="my-3">
+  <app-list #list [columns]="columns" [caption]="'Currencies'" [actions]="tableActions" [hasAction]="true"
+    [data]="currencies$|async" (actionClick)="onClick($event)">
+  </app-list>
+</div>
