--- a/src/app/operation/components/ui/currency-form/currency-form.component.html
+++ b/src/app/operation/components/ui/currency-form/currency-form.component.html
@@ -5,7 +5,7 @@
   </mat-form-field>
   <mat-form-field class="d-block">
     <mat-label>Alias</mat-label>
-    <input matInput formControlName="name" required>
+    <input matInput formControlName="alias" required>
   </mat-form-field>
 
   <div mat-dialog-actions class="text-end">
