changed breakpoint to change header from row to column style

--- a/src/app/main/components/ui/header/header.component.html
+++ b/src/app/main/components/ui/header/header.component.html
@@ -1,7 +1,7 @@
 <header class="p-2 text-bg-dark">
   <div class="container">
     <div
-      class="d-flex flex-wrap align-items-center justify-content-center justify-content-lg-start flex-sm-column flex-lg-row">
+      class="d-flex flex-wrap align-items-center justify-content-center justify-content-lg-start flex-sm-column flex-md-row">
       <a href="/" class="d-flex align-items-center mb-lg-0 text-white text-decoration-none">
         <h1 class="m-0 fw-bold">MAVEKO</h1>
       </a>
