--- a/src/app/operation/components/ui/product-item-form/product-item-form.component.html
+++ b/src/app/operation/components/ui/product-item-form/product-item-form.component.html
@@ -1,1 +1,43 @@
-<p>product-item-form works!</p>
+<form [formGroup]="form" (submit)="onSubmit()" class="p-3">
+  <mat-form-field class="d-block">
+    <mat-label>Image Url</mat-label>
+    <input matInput formControlName="product_image" required>
+  </mat-form-field>
+  <mat-form-field class="d-block">
+    <mat-label>Color</mat-label>
+    <input matInput formControlName="color">
+  </mat-form-field>
+  <mat-form-field class="d-block">
+    <mat-label>Size</mat-label>
+    <input matInput formControlName="size">
+  </mat-form-field>
+  <mat-form-field class="d-block">
+    <mat-label>Unit of Measure</mat-label>
+    <mat-select formControlName="unit_of_measure_id" required>
+      <mat-option value="1">First option</mat-option>
+      <mat-option value="2">Second option</mat-option>
+    </mat-select>
+  </mat-form-field>
+  <mat-form-field class="d-block">
+    <mat-label>Price</mat-label>
+    <input matInput type="number" formControlName="price" required>
+  </mat-form-field>
+  <mat-form-field class="d-block">
+    <mat-label>Currency</mat-label>
+    <mat-select formControlName="currency_id" required>
+      <mat-option *ngFor="let currency of currencies$|async" [value]='currency.id'>{{ currency.alias }}</mat-option>
+    </mat-select>
+  </mat-form-field>
+
+  <div mat-dialog-actions align="end">
+    <button mat-raised-button type="button" color="warn" (click)="onClose()">
+      <mat-icon>remove_circle</mat-icon>
+      Cancel
+    </button>
+    &nbsp;
+    <button mat-raised-button color="primary" type="submit" class="justify-content-center align-items-center">
+      <mat-icon>save</mat-icon>
+      Save
+    </button>
+  </div>
+</form>
