removed categories route and navbar link

--- a/src/app/main/components/ui/header/header.component.html
+++ b/src/app/main/components/ui/header/header.component.html
@@ -9,7 +9,7 @@
       <div class="flex-fill d-block" style="font-size: 12px">
         <ul class="nav col-12 me-md-auto justify-content-center mb-md-0">
           <li><a [routerLink]="['/suppliers']" class="nav-link px-2 text-white">Suppliers</a></li>
-          <li><a [routerLink]="['/categories']" class="nav-link px-2 text-white">Categories</a></li>
+          <!-- <li><a [routerLink]="['/categories']" class="nav-link px-2 text-white">Categories</a></li> -->
           <li><a [routerLink]="['/products']" class="nav-link px-2 text-white">Products</a></li>
           <li><a [routerLink]="['/currencies']" class="nav-link px-2 text-white">Currencies</a></li>
           <li><a [routerLink]="['/units_of_measure']" class="nav-link px-2 text-white">Units of Measure</a></li>
