--- a/src/app/operation/components/container/currency/currency.component.html
+++ b/src/app/operation/components/container/currency/currency.component.html
@@ -1,7 +1,7 @@
-<button mat-raised-button class="action-button bg-success text-white px-4" (click)="onNewClick()">
+<!-- <button mat-raised-button class="action-button bg-success text-white px-4" (click)="onNewClick()">
   <i class="pi pi-plus-circle"></i>
   New
-</button>
+</button> -->
 
 <div class="my-3">
   <app-list #list [columns]="columns" [caption]="'Currencies'" [actions]="tableActions" [hasAction]="true"
