--- a/src/app/operation/components/container/unit-of-measure/unit-of-measure.component.html
+++ b/src/app/operation/components/container/unit-of-measure/unit-of-measure.component.html
@@ -1,1 +1,10 @@
-<app-unit-of-measure-form></app-unit-of-measure-form>
+<!-- <button mat-raised-button class="action-button bg-success text-white px-4" (click)="onNewClick()">
+  <i class="pi pi-plus-circle"></i>
+  New
+</button> -->
+
+<div class="my-3">
+  <app-list #list [columns]="columns" [caption]="'Currencies'" [actions]="tableActions" [hasAction]="true"
+    [data]="units_of_measure$|async" (actionClick)="onClick($event)">
+  </app-list>
+</div>
