--- a/src/app/operation/components/ui/unit-of-measure-form/unit-of-measure-form.component.html
+++ b/src/app/operation/components/ui/unit-of-measure-form/unit-of-measure-form.component.html
@@ -1,15 +1,15 @@
-<form class="p-3">
+<form [formGroup]="form" (submit)="onSubmit()" class="p-3">
   <mat-form-field class="d-block">
     <mat-label>Name</mat-label>
-    <input matInput required>
+    <input matInput formControlName="name" required>
   </mat-form-field>
   <mat-form-field class="d-block">
     <mat-label>Alias</mat-label>
-    <input matInput required>
+    <input matInput formControlName="alias" required>
   </mat-form-field>
 
   <div mat-dialog-actions class="text-end">
-    <button mat-raised-button type="button" color="warn">
+    <button mat-raised-button type="button" color="warn" (click)="onClose()">
       <mat-icon>remove_circle</mat-icon>
       Cancel
     </button>
