--- a/src/app/operation/components/container/user/user.component.html
+++ b/src/app/operation/components/container/user/user.component.html
@@ -1,1 +1,10 @@
-<p>user works!</p>
+<button mat-raised-button class="action-button bg-success text-white px-4" (click)="onNewClick()">
+  <i class="pi pi-plus-circle"></i>
+  New
+</button>
+
+<div class="my-3">
+  <app-list #list [columns]="columns" [caption]="'Products'" [actions]="tableActions" [hasAction]="true"
+    [data]="users$|async" (actionClick)="onClick($event)">
+  </app-list>
+</div>
