--- a/src/app/operation/components/ui/product-form/product-form.component.html
+++ b/src/app/operation/components/ui/product-form/product-form.component.html
@@ -4,6 +4,10 @@
     <input matInput formControlName="name" required>
   </mat-form-field>
   <mat-form-field class="d-block">
+    <mat-label>Image Url</mat-label>
+    <input matInput formControlName="image_url" required>
+  </mat-form-field>
+  <mat-form-field class="d-block">
     <mat-label>Description</mat-label>
     <textarea matInput formControlName="description"></textarea>
   </mat-form-field>
