--- a/src/app/operation/components/ui/product-form/product-form.component.html
+++ b/src/app/operation/components/ui/product-form/product-form.component.html
@@ -4,6 +4,10 @@
     <input matInput formControlName="name" required>
   </mat-form-field>
   <mat-form-field class="d-block">
+    <mat-label>Brand</mat-label>
+    <input matInput formControlName="brand" required>
+  </mat-form-field>
+  <mat-form-field class="d-block">
     <mat-label>Image Url</mat-label>
     <input matInput formControlName="image_url" required>
   </mat-form-field>
@@ -15,12 +19,6 @@
     <mat-label>Product Category</mat-label>
     <mat-select formControlName="category_id" required>
       <mat-option *ngFor="let category of categories$|async" [value]='category.id'>{{ category.name }}</mat-option>
-    </mat-select>
-  </mat-form-field>
-  <mat-form-field class="d-block">
-    <mat-label>Product Supplier</mat-label>
-    <mat-select formControlName="supplier_id" required>
-      <mat-option *ngFor="let supplier of suppliers$|async" [value]='supplier.id'>{{ supplier.name }}</mat-option>
     </mat-select>
   </mat-form-field>
 
