--- a/src/app/operation/components/ui/unit-of-measure-form/unit-of-measure-form.component.html
+++ b/src/app/operation/components/ui/unit-of-measure-form/unit-of-measure-form.component.html
@@ -4,8 +4,8 @@
     <input matInput formControlName="name" required>
   </mat-form-field>
   <mat-form-field class="d-block">
-    <mat-label>Alias</mat-label>
-    <input matInput formControlName="alias" required>
+    <mat-label>Abbreviation</mat-label>
+    <input matInput formControlName="abbreviation" required>
   </mat-form-field>
 
   <div mat-dialog-actions class="text-end">
