removed required attribute from brand field in product-form

--- a/src/app/operation/components/ui/product-form/product-form.component.html
+++ b/src/app/operation/components/ui/product-form/product-form.component.html
@@ -5,7 +5,7 @@
   </mat-form-field>
   <mat-form-field class="d-block">
     <mat-label>Brand</mat-label>
-    <input matInput formControlName="brand" required>
+    <input matInput formControlName="brand">
   </mat-form-field>
   <mat-form-field class="d-block">
     <mat-label>Image Url</mat-label>
