--- a/src/app/main/components/ui/header/header.component.html
+++ b/src/app/main/components/ui/header/header.component.html
@@ -21,7 +21,7 @@
           <i class="pi pi-users"></i>
           Users
         </button>
-        <button type="button" class="btn btn-sm btn-warning px-3">
+        <button type="button" class="btn btn-sm btn-warning px-3" (click)="onSignOut()">
           <i class="pi pi-sign-out"></i>
           Sign-out
         </button>
