--- a/src/app/admin/components/container/product-item/product-item.component.html
+++ b/src/app/admin/components/container/product-item/product-item.component.html
@@ -6,7 +6,7 @@
     </button>
   </div>
 
-  <div class="text-end">
+  <div *ngIf="user_type == 'Admin'" class="text-end">
     <button mat-raised-button class="action-button bg-primary text-white px-4 mx-2" (click)="onApprove()">
       <i class="pi pi-check"></i>
       Approve
@@ -20,7 +20,7 @@
 
 <div class="my-3">
   <app-list #list [columns]="columns" [caption]="'Product Items'" [actions]="tableActions" [hasAction]="true"
-    [checkbox]="true" [data]="product_items$|async" (actionClick)="onClick($event)"
+    [checkbox]="user_type == 'Admin'" [data]="product_items$|async" (actionClick)="onClick($event)"
     (selectedData)="onSelectProductItem($event)">
   </app-list>
 </div>
