--- a/src/app/main/components/ui/header/header.component.html
+++ b/src/app/main/components/ui/header/header.component.html
@@ -17,7 +17,8 @@
       </div>
 
       <div class="text-end">
-        <button [routerLink]="['/users']" type="button" class="btn btn-sm btn-outline-light me-2 px-3">
+        <button *ngIf="user_type == 'Admin'" [routerLink]="['/users']" type="button"
+          class="btn btn-sm btn-outline-light me-2 px-3">
           <i class="pi pi-users"></i>
           Users
         </button>
