added integration with api on users service
not tested because the url for users is not known

--- a/src/app/admin/components/ui/user-form/user-form.component.html
+++ b/src/app/admin/components/ui/user-form/user-form.component.html
@@ -15,8 +15,8 @@
   <mat-form-field class="d-block">
     <mat-label>User Role</mat-label>
     <mat-select formControlName="user_role" required>
-      <mat-option value='operator'>Operator</mat-option>
-      <mat-option value='admin'>Admin</mat-option>
+      <mat-option value='Operator'>Operator</mat-option>
+      <mat-option value='Admin'>Admin</mat-option>
     </mat-select>
   </mat-form-field>
 
