--- a/src/app/admin/components/container/user/user.component.html
+++ b/src/app/admin/components/container/user/user.component.html
@@ -4,7 +4,7 @@
 </button>
 
 <div class="my-3">
-  <app-list #list [columns]="columns" [caption]="'Products'" [actions]="tableActions" [hasAction]="true"
+  <app-list #list [columns]="columns" [caption]="'Products'" [actions]="tableActions" [hasAction]="false"
     [data]="users$|async" (actionClick)="onClick($event)">
   </app-list>
 </div>
