removed currency and unit_of_measures route and links from header navbar

--- a/src/app/main/components/ui/footer/footer.component.html
+++ b/src/app/main/components/ui/footer/footer.component.html
@@ -1,1 +1,1 @@
-<footer class="text-bg-dark text-center py-2">Maveko Product Catalogue</footer>
+<footer class="text-bg-dark text-center py-2">&#xA9; 2022, Maveko Product Catalogue</footer>
