--- a/src/app/admin/components/ui/category-form/category-form.component.html
+++ b/src/app/admin/components/ui/category-form/category-form.component.html
@@ -9,7 +9,7 @@
   </mat-form-field>
   <mat-form-field class="d-block">
     <mat-label>Parent Category</mat-label>
-    <mat-select formControlName="parent_id" required>
+    <mat-select formControlName="ancestry" required>
       <mat-option *ngFor="let category of categories$|async" [value]='category.id'>{{ category.name }}</mat-option>
     </mat-select>
   </mat-form-field>
