--- a/src/app/admin/components/container/product-item/product-item.component.html
+++ b/src/app/admin/components/container/product-item/product-item.component.html
@@ -7,11 +7,12 @@
   </div>
 
   <div *ngIf="user_type == 'Admin'" class="text-end">
-    <button mat-raised-button class="action-button bg-primary text-white px-4 mx-2" (click)="onApprove()">
+    <button mat-raised-button class="action-button bg-primary text-white px-4 mx-2"
+      (click)="onApproveProductItem(true)">
       <i class="pi pi-check"></i>
       Approve
     </button>
-    <button mat-raised-button class="action-button bg-danger text-white px-4" (click)="onDecline()">
+    <button mat-raised-button class="action-button bg-danger text-white px-4" (click)="onApproveProductItem(false)">
       <i class="pi pi-times"></i>
       Decline
     </button>
@@ -20,7 +21,7 @@
 
 <div class="my-3">
   <app-list #list [columns]="columns" [caption]="'Product Items'" [actions]="tableActions" [hasAction]="true"
-    [checkbox]="user_type == 'Admin'" [data]="product_items$|async" (actionClick)="onClick($event)"
-    (selectedData)="onSelectProductItem($event)">
+    [checkedData]="selectedItems" [checkbox]=" user_type=='Admin'" [data]=" product_items$|async"
+    (actionClick)="onClick($event)" (selectedData)="onSelectProductItem($event)">
   </app-list>
 </div>
