--- a/src/app/shared/components/list/list.component.html
+++ b/src/app/shared/components/list/list.component.html
@@ -28,7 +28,21 @@
       </td>
       <td *ngFor="let column of columns">
         <span *ngIf="column.type==='date'">{{d[column.name] |date:'medium'}}</span>
-        <span *ngIf="column.type===undefined">{{d[column.name]}}</span>
+        <span *ngIf="column.type===undefined">
+          <span class="badge rounded-pill border bg-opacity-25 border-opacity-10
+            {{(
+                d[column.name]=='Approved'? 
+                  'border-success bg-success text-success' : 
+                  (
+                    d[column.name]=='Declined' ? 
+                      'border-danger bg-danger text-danger' : 
+                      ' border-primary bg-primary text-primary'
+                  )
+            )}}" *ngIf=" column.name=='status' ; else plainText">
+            {{d[column.name]}}
+          </span>
+          <ng-template #plainText>{{d[column.name]}}</ng-template>
+        </span>
       </td>
       <ng-container *ngIf="hasAction">
         <td>
