--- a/src/app/shared/components/list/list.component.scss
+++ b/src/app/shared/components/list/list.component.scss
@@ -39,3 +39,11 @@ td {
 .mr-3 {
   margin-right: 1em;
 }
+
+.imageLink {
+  max-width: 250px;
+  display: block;
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+}
