added route and navbar link for quotation

--- a/src/app/main/components/ui/header/header.component.html
+++ b/src/app/main/components/ui/header/header.component.html
@@ -11,6 +11,7 @@
           <li><a [routerLink]="['/suppliers']" class="nav-link px-3 navbar-links">Suppliers</a></li>
           <!-- <li><a [routerLink]="['/categories']" class="nav-link px-3 navbar-links">Categories</a></li> -->
           <li><a [routerLink]="['/products']" class="nav-link px-3 navbar-links">Products</a></li>
+          <li><a [routerLink]="['/quotations']" class="nav-link px-3 navbar-links">Quotation Requests</a></li>
           <!-- <li><a [routerLink]="['/currencies']" class="nav-link px-3 navbar-links">Currencies</a></li> -->
           <!-- <li><a [routerLink]="['/units_of_measure']" class="nav-link px-3 navbar-links">Units of Measure</a></li> -->
         </ul>
