--- a/src/app/admin/components/container/product-item/product-item.component.html
+++ b/src/app/admin/components/container/product-item/product-item.component.html
@@ -22,6 +22,6 @@
 <div class="my-3">
   <app-list #list [columns]="columns" [caption]="'Product Items'" [actions]="tableActions" [hasAction]="true"
     [checkedData]="selectedItems" [checkbox]=" user_type=='Admin'" [data]=" product_items$|async"
-    (actionClick)="onClick($event)" (selectedData)="onSelectProductItem($event)">
+    (actionClick)="onClick($event)" (selectedData)="onSelectProductItem($event)" [hasPagination]="true" [rows]="10">
   </app-list>
 </div>
