--- a/src/app/admin/components/container/product/product.component.html
+++ b/src/app/admin/components/container/product/product.component.html
@@ -5,6 +5,6 @@
 
 <div class="my-3">
   <app-list #list [columns]="columns" [caption]="'Products'" [actions]="tableActions" [hasAction]="true"
-    [data]="products$|async" (actionClick)="onClick($event)">
+    [data]="products$|async" (actionClick)="onClick($event)" [hasPagination]="true" [rows]="10">
   </app-list>
 </div>
