--- a/src/app/admin/components/container/quotation/quotation.component.html
+++ b/src/app/admin/components/container/quotation/quotation.component.html
@@ -1,4 +1,5 @@
 <div class="my-3">
-  <app-list #list [columns]="columns" [caption]="'Quotation Requests'" [hasAction]="false" [data]="quotation$|async">
+  <app-list #list [columns]="columns" [caption]="'Quotation Requests'" [hasAction]="false" [data]="quotation$|async"
+    [hasPagination]="true" [rows]="15">
   </app-list>
 </div>
