--- a/src/app/admin/components/ui/product-item-form/product-item-form.component.html
+++ b/src/app/admin/components/ui/product-item-form/product-item-form.component.html
@@ -16,7 +16,7 @@
     <input matInput formControlName="capacity">
   </mat-form-field>
   <mat-form-field class="d-block">
-    <mat-label>Unit of Measure ID</mat-label>
+    <mat-label>Packaging Unit</mat-label>
     <mat-select formControlName="unit_of_measure_id" required>
       <mat-option *ngFor="let package_unit of package_units$|async" [value]='package_unit.id'>{{
         package_unit.abbreviation }}</mat-option>
