--- a/src/app/main/components/ui/header/header.component.scss
+++ b/src/app/main/components/ui/header/header.component.scss
@@ -12,14 +12,21 @@
     transform: scale(1.05);
 }
 
-.menu-item{
-  width: 300px;
-  height: fit-content;
-}
-
 .notification-message{
-  width: 20%;
+  width: 180px;
   white-space: nowrap;
   overflow: hidden;
   text-overflow: ellipsis;
+}
+
+.notification-item:hover{
+  background-color: #eee;
+}
+
+.notifications-container{
+  max-height: 600px;
+}
+
+.pointer{
+  cursor: pointer;
 }
