added ellipsis on description column

--- a/src/app/shared/components/list/list.component.html
+++ b/src/app/shared/components/list/list.component.html
@@ -48,7 +48,13 @@
               {{d[column.name]}}
             </a>
             <ng-template #noLinkText>
-              {{d[column.name]}}
+              <div class="wrapText" *ngIf="column.name === 'description'; else noWrapText">
+                {{d[column.name]}}
+              </div>
+              <ng-template #noWrapText>
+                {{d[column.name]}}
+              </ng-template>
+
             </ng-template>
           </ng-template>
         </span>
