added badge to notifications icon

--- a/src/app/main/components/container/layout/layout.component.html
+++ b/src/app/main/components/container/layout/layout.component.html
@@ -1,5 +1,5 @@
 <div class="d-flex flex-column" style="height: 100%">
-  <app-header (signOut)="signOutUser()" [notifications$]="notifications$" (markAsRead)="markAsRead($event)">
+  <app-header (signOut)="signOutUser()" [notificationsList]="notifications$ | async" (markAsRead)="markAsRead($event)">
   </app-header>
   <div class="container my-4 flex-fill">
     <router-outlet></router-outlet>
