--- a/src/app/admin/components/container/quotation/quotation.component.html
+++ b/src/app/admin/components/container/quotation/quotation.component.html
@@ -1,5 +1,15 @@
+<div class="">
+  <div *ngIf="user_type == 'Operator'" class="text-end">
+    <button mat-raised-button class="action-button bg-danger text-white px-4" (click)="onMarkAsDone()">
+      <i class="pi pi-check"></i>
+      Mark as Done!
+    </button>
+  </div>
+</div>
+
 <div class="my-3">
   <app-list #list [columns]="columns" [caption]="'Quotation Requests'" [hasAction]="false" [data]="quotation$|async"
+    [checkedData]="selectedItems" [checkbox]="user_type=='Operator'" (selectedData)="onSelectQuotation($event)"
     [hasPagination]="true" [rows]="10">
   </app-list>
 </div>
