--- a/src/app/shared/components/list/list.component.scss
+++ b/src/app/shared/components/list/list.component.scss
@@ -41,12 +41,9 @@ td {
 }
 
 .imageLink, .wrapText {
-  max-width: 250px;
+  width: 100px;
   display: block;
   white-space: nowrap;
   overflow: hidden;
   text-overflow: ellipsis;
-}
-.wrapText {
-  max-width: 150px;
 }
